<resources>
    <string name="app_name">Digital House Foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha_s_22_00">Fecha às 22:00</string>
    <string name="tomy_roma_s">Tomy Roma\'s</string>
    <string name="av_lavandisca_717_indian_polis_s_o_paulo">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="nome">Nome</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="salada_com_molho_gengibre">Salada com molho Gengibre</string>
    <string name="salada_com_molho_gengibre">Salada com molho Gengibre</string>
    <string name="sed_ut_perspiciatis_unde_omnis_iste_natus_error_sit_voluptatem_accusant_doloremque_laudantium_totam_rem_aperiam_eaque_ipsa_quae_ab_illo_inventore_veritatis">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="tony_roma_s">Tony Roma\'s</string>
    <string name="pratos_principais">Pratos principais</string>
</resources>