<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="608dp"
        android:layout_gravity="center|center_vertical"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNomeRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorGrey1"
                android:hint="@string/nome"
                android:inputType="text"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorGrey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorGrey1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorGrey" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorGrey1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorGrey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtRepeatPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorGrey1"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorGrey" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="333dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="300dp"
            android:background="@color/colorRed"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


    </LinearLayout>
</FrameLayout>