<com.google.android.material.card.MaterialCardView android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgRestauranteItem"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:srcCompat="@drawable/restaurante1"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/txtNomeRestauranteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomy_roma_s"
                android:textSize="36sp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:id="@+id/txtEnderecoRestauranteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/av_lavandisca_717_indian_polis_s_o_paulo"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />
            <TextView
                android:id="@+id/txtHorarioFechamentoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/fecha_s_22_00"
                android:textSize="16sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>


